# Brains

./: .gitignore  Brains-XDEV.code-workspace  CHANGELOG.md  GITHUB_READY.md  LICENSE  PRE_PUSH_CHECKLIST.md  README.md  SUMMARY.md  TESTING.md  pyproject.toml  requirements.txt  test_beginner_nodes.py
.github/: copilot-instructions.md
docs/: BEGINNER_NODES_SUMMARY.md  DEVELOPMENT.md  NODE_GUIDE.md  TESTING_GUIDE.md  TROUBLESHOOTING.md
docs/archive/: BUGFIXES.md  DEBUGGING_SUMMARY.md  FIX_SUMMARY.md  MIGRATION_COMPLETE.md  QUICKFIX.md  README.md  WORKFLOW_FIXES.md
src/: __init__.py  auto_quality_rater.py  brain_datatype.py  brightness_example.py  memory_stats_dashboard.py  memory_teacher.py  smart_memory_loader.py  smart_prompt_helper.py  test_imports.py
src/promptbrain/: __init__.py  brain_data.py  brain_learn.py  brain_source.py  captioner.py  ema_ranker.py  florence2_adapter.py  memory.py  scorer.py  suggester.py  tagger.py  wd14_adapter.py
src/tests/: __init__.py  test_brains_xdev.py
tools/: analyze_brain.py  cleanup_memory.py  comfyui_status_check.py  enhanced_wd14_tagger.py  install_dependencies.py  run_ws_client.py
workflows/: INDEX.md  README.md  beginner_nodes_test.workflow.json  demo_brains_xdev.prompt.json
workflows/advanced/: CREATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  artistic_figure_studies.json  automated_quality_pipeline.json  character_concept_art.json  fashion_photography.json  parameter_optimization.json  professional_portrait_studio.json  style_transfer_learning.json
workflows/ai_adapters/: florence2_adapter_debug.json
(+28 files in other folders)
